@@ -190,11 +190,6 @@ void wxCFEventLoop::DoYieldFor(long eventsToProcess)
     while ( DoProcessEvents() == 1 )
         ;
 
-    // it's necessary to call ProcessIdle() to update the frames sizes which
-    // might have been changed (it also will update other things set from
-    // OnUpdateUI() which is a nice (and desired) side effect)
-    while ( ProcessIdle() ) {}
-
     wxEventLoopBase::DoYieldFor(eventsToProcess);
 }
 
